2.8.1 (2017-05-19)
* Link to `lwt.unix` correctly, regressed in jbuilder port (report by @dim)
* Remove duplicated entries from `opam` file.

2.8.0 (2017-05-16)
* switch to buffered I/O by default
* better support for unbuffered I/O for non-512 byte sectors
* for files which are not a whole number of sectors, pad with virtual zeroes
* switch to jbuilder
* add a Dockerfile

2.7.0 (2017-02-19)
* add a simple file copy benchmark
* add bindings for readv, writev
* cache the file offset and avoid unnecessary calls to lseek

2.6.0 (2017-02-13)
* allow fsync to be used in preference to fcntl for flushing on macOS

2.5.0 (2017-01-17)
* use MirageOS 3 error scheme & new dependencies; drop support for earlier versions

2.4.0 (21-Sept-2016)
* add optional arguments with safe defaults to `Block.connect`.
* add a new Block.Config.t containing configuration parameters,
  serialisation and deserialisation
* fix appveyor build by removing cygwin curl

2.3.0 (2-Aug-2016)
* use fcntl(F_FULLFSYNC) on OSX rather than plain fsync
* add linux-headers depext for alpine
* hold the mutex around `ftruncate` while updating `size_sectors`
* hold the mutex around bounds checks
* require cstruct >= 1.3.0

2.2.0 (3-Mar-2016)
* Add basic Win32 support, tested via appveyor
* Use logs library
* Check buffers have proper lengths in `read` and `write`

2.1.0 (9-Nov-2015)
* Add `Block.resize` to resize file-backed devices
* Unit tests now work on OSX
* opam file improvements
* fail on read/write attempts after last sector
* add `Block.flush` for when operating in buffered mode
* add support for sparseness via `Block.seek_mapped` and `Block.seek_unmapped`

2.0.0 (27-Mar-2015):
* Incompatible API change: Block.blkgetsize takes an extra argument (a file descriptor)
* Support NetBSD through DIOCGMEDIASIZE
* Support rumprun by avoiding re-opening files, instead we use file descriptors internally

1.2.2 (07-Mar-2015)
* Expose an explicit `connect` function in the interface signature. (#20)