@@ -10,11 +10,9 @@ env:
  matrix:
    - DISTRO=debian-stable OCAML_VERSION=4.03.0
    - DISTRO=debian-testing OCAML_VERSION=4.03.0
-   - DISTRO=debian-unstable OCAML_VERSION=4.03.0
-   - DISTRO=ubuntu-12.04 OCAML_VERSION=4.03.0
-   - DISTRO=ubuntu-15.10 OCAML_VERSION=4.03.0
-   - DISTRO=ubuntu-16.04 OCAML_VERSION=4.03.0
+   - DISTRO=debian-unstable OCAML_VERSION=4.04.0
+   - DISTRO=ubuntu-16.04 OCAML_VERSION=4.04.1
    - DISTRO=centos-6 OCAML_VERSION=4.03.0
    - DISTRO=centos-7 OCAML_VERSION=4.03.0
-   - DISTRO=fedora-23 OCAML_VERSION=4.03.0
-   - DISTRO=alpine-3.3 OCAML_VERSION=4.03.0
+   - DISTRO=fedora-25 OCAML_VERSION=4.03.0
+   - DISTRO=alpine-3.5 OCAML_VERSION=4.04.1
